// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bundle Integration Tests > simple spec without references > should bundle JSON format when specified 1`] = `
"{
  "openapi": "3.1.1",
  "info": {
    "title": "Simple Test API",
    "version": "1.0.0",
    "license": {
      "name": "example.dev",
      "url": "example.dev"
    }
  },
  "servers": [
    {
      "url": "example.dev"
    }
  ],
  "security": [
    {
      "BearerToken": []
    }
  ],
  "paths": {
    "/test": {
      "get": {
        "operationId": "getTest",
        "summary": "Test endpoint",
        "responses": {
          "200": {
            "description": "Success",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "id": {
                      "type": "string"
                    },
                    "name": {
                      "type": "string"
                    }
                  }
                }
              }
            }
          },
          "404": {
            "description": "Not Found"
          }
        }
      }
    }
  },
  "components": {
    "securitySchemes": {
      "BearerToken": {
        "type": "http",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      }
    }
  }
}"
`;

exports[`Bundle Integration Tests > simple spec without references > should bundle YAML format by default 1`] = `
"openapi: 3.1.1
info:
  title: Simple Test API
  version: 1.0.0
  license:
    name: example.dev
    url: example.dev
servers:
  - url: example.dev
security:
  - BearerToken: []
paths:
  /test:
    get:
      operationId: getTest
      summary: Test endpoint
      responses:
        '200':
          description: Success
          content:
            application/json:
              schema:
                type: object
                properties:
                  id:
                    type: string
                  name:
                    type: string
        '404':
          description: Not Found
components:
  securitySchemes:
    BearerToken:
      type: http
      scheme: bearer
      bearerFormat: JWT
"
`;

exports[`Bundle Integration Tests > spec with $ref references > should produce valid bundled JSON 1`] = `
"{
  "openapi": "3.1.1",
  "info": {
    "title": "Test API with References",
    "version": "1.0.0",
    "license": {
      "name": "example.dev",
      "url": "example.dev"
    }
  },
  "servers": [
    {
      "url": "example.dev"
    }
  ],
  "security": [
    {
      "BearerToken": []
    }
  ],
  "paths": {
    "/test": {
      "get": {
        "operationId": "getTest",
        "summary": "Test endpoint",
        "responses": {
          "200": {
            "description": "Success",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/TestSchema"
                }
              }
            }
          },
          "404": {
            "description": "Not Found"
          }
        }
      }
    }
  },
  "components": {
    "securitySchemes": {
      "BearerToken": {
        "type": "http",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      }
    },
    "schemas": {
      "TestSchema": {
        "type": "object",
        "properties": {
          "id": {
            "type": "string"
          },
          "name": {
            "type": "string"
          }
        }
      }
    }
  }
}"
`;

exports[`Bundle Integration Tests > spec with $ref references > should resolve and bundle external references 1`] = `
"openapi: 3.1.1
info:
  title: Test API with References
  version: 1.0.0
  license:
    name: example.dev
    url: example.dev
servers:
  - url: example.dev
security:
  - BearerToken: []
paths:
  /test:
    get:
      operationId: getTest
      summary: Test endpoint
      responses:
        '200':
          description: Success
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/TestSchema'
        '404':
          description: Not Found
components:
  securitySchemes:
    BearerToken:
      type: http
      scheme: bearer
      bearerFormat: JWT
  schemas:
    TestSchema:
      type: object
      properties:
        id:
          type: string
        name:
          type: string
"
`;
